sql/ha_innodb.cc
@@ -1863,16 +1863,19 @@ ha_innobase::get_row_type() const
 
 /********************************************************************
 Gives the file extension of an InnoDB single-table tablespace. */
+static const char* ha_innobase_exts[] = {
+  ".ibd",
+  NullS
+};
 
 const char**
 ha_innobase::bas_ext() const
 /*========================*/
 				/* out: file extension string */
 {
-	static const char* ext[] = {".ibd", NullS};
-
-	return(ext);
+  return ha_innobase_exts;
 }
+
 
 /*********************************************************************
 Normalizes a table name string. A normalized name consists of the
